--- a/cmd/node/cmd/testConfig/nodeConfigTest.json
+++ b/cmd/node/cmd/testConfig/nodeConfigTest.json
@@ -21,7 +21,7 @@
   },
   "httpServer": {
     "address": "127.0.0.1:65027",
-    "crosssorigins": [
+    "crossorigins": [
       "*"
     ],
     "whiteHost": [
