--- a/cmd/node/cmd/testConfig/nodeConfigTest.json
+++ b/cmd/node/cmd/testConfig/nodeConfigTest.json
@@ -13,7 +13,7 @@
       "127.0.0.1:39007",
       "127.0.0.1:39008"
     ],
-    "networkID": 1
+    "networkID": "seele"
   },
   "log": {
     "isDebug": true,
