add benchmark test

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: go
 script: 
     - go test -p 1 -covermode=atomic -cover `go list ./... | grep -v istanbul`
+    - go test -bench=. -run Benchmark -cover `go list ./... | grep -v istanbul`
     - make
